--- a/index.html
+++ b/index.html
@@ -19,15 +19,11 @@
         <p>
         <div id="sectionHeader">VFW-Project1:</div>
         <ul>
-          <li>https://github.com/atljeremy/VFW-Project-1</li>
-          <li>http://atljeremy.github.com/VFW-Project-1</li>
+          <li><a href="https://github.com/atljeremy/VFW-Project-1">https://github.com/atljeremy/VFW-Project-1</a></li>
+          <li><a href="http://atljeremy.github.com/VFW-Project-1">http://atljeremy.github.com/VFW-Project-1</a></li>
         </ul>
-        
         </p>
-        
-        <p>
-        <input type="submit" id="submitBillForm" />
-        </p>
+
       </form>
     </div>  
     <div id="footer"> &copy atljeremy </div>
