removed un-needed notes

--- a/index.html
+++ b/index.html
@@ -44,17 +44,9 @@
                   <li><b>Repo:</b> <a href="https://github.com/atljeremy/Stylus.mode">https://github.com/atljeremy/Stylus.mode</a></li>
                 </ul>
               
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="cell">
-              <div class="note">Hi</div>
-            </div>
-            <div class="cell">
-              <div class="note">Hi</div>
-            </div>
-          </div>
+              </div> <!-- /note -->
+            </div> <!-- /cell -->
+          </div> <!-- /row -->
         </div> <!-- /grid -->
       </div> <!-- /overflowHidden -->
 
