--- a/index.html
+++ b/index.html
@@ -24,8 +24,19 @@
 	  </div> <!-- /header -->
 		  
       <div id="mainContent">
+		  
+    	<div class="note float_left">
+  			<h2>coMpanion</h2>
+
+  			<img src="i/coMpanion.png" class="promo-image" />
+
+  			<div class="links">
+  			  <a href="https://appsto.re/us/f1ggW.i" class="greenBtn">iOS</a>
+			  <a href="" class="greenBtn">Android (Coming Soon!)</a>
+  			</div>
+    	</div> <!-- /note -->
 		
-  		<div class="note float_left">
+  		<div class="note float_right">
   			<h2>SnapTo</h2>
 
   			<img src="i/snapto_icon.png" class="promo-image" />
@@ -36,7 +47,9 @@
   			</div>
   		</div> <!-- /note -->
 
-  		<div class="note float_right">
+  		<div class="clear"></div>
+
+  		<div class="note float_left">
 			<h2>My Notes</h2>
 
 			<img src="i/my_notes.png" class="promo-image" />
@@ -45,10 +58,8 @@
 			  <a href="https://play.google.com/store/apps/details?id=com.jeremyfox.My_Notes&hl=en_GB" class="greenBtn">Android</a>
 			</div>
   		</div> <!-- /note -->
-
-  		<div class="clear"></div>
 		
-		<div class="note float_left">
+		<div class="note float_right">
 			<h2>PetFinder iOS API</h2>
 
 			<img src="i/framework.png" class="promo-image" />
@@ -57,8 +68,10 @@
 			  <a href="https://github.com/atljeremy/PetFinderAPI" class="greenBtn">Repo</a>
 			</div>
 		</div> <!-- /note -->
+		
+		<div class="clear"></div>
 
-		<div class="note float_right">
+		<div class="note float_left">
 			<h2>Pivotal Tracker API</h2>
 
 			<img src="i/ruby.png" class="promo-image" />
@@ -68,10 +81,8 @@
 			  <a href="https://github.com/atljeremy/pivotal-tracker-api" class="greenBtn">Repo</a>
 			</div>
 		</div> <!-- /note -->
-
-		<div class="clear"></div>
 		
-		<div class="note float_left">
+		<div class="note float_right">
 			<h2>JFMinimalNotifications</h2>
 
 			<img src="i/jf_minimal_notifications.png" class="promo-image" />
@@ -80,8 +91,10 @@
 			  <a href="https://github.com/atljeremy/JFMinimalNotifications" class="greenBtn">Repo</a>
 			</div>
 		</div> <!-- /note -->
+		
+		<div class="clear"></div>
 
-		<div class="note float_right">
+		<div class="note float_left">
   			<h2>JFDepthView</h2>
 
   			<img src="i/jfdepthview.png" class="promo-image" />
@@ -90,10 +103,8 @@
   			  <a href="https://github.com/atljeremy/JFDepthView" class="greenBtn">Repo</a>
   			</div>
 		</div> <!-- /note -->
-
-		<div class="clear"></div>
 		
-		<div class="note float_left">
+		<div class="note float_right">
 			<h2>TeamScor.es</h2>
 
 			<img src="i/teamscor.es.png" class="promo-image shadow" />
@@ -102,8 +113,10 @@
 			  <a href="https://www.teamscor.es" class="greenBtn">Website</a>
 			</div>
 		</div> <!-- /note -->
+		
+		<div class="clear"></div>
 
-		<div class="note float_right">
+		<div class="note float_left">
 			<h2>HitMe</h2>
 
 			<img src="i/hitme-json.png" class="promo-image" />
@@ -112,10 +125,8 @@
 			  <a href="https://hitme.jeremyfox.me" class="greenBtn">Website</a>
 			</div>
 		</div> <!-- /note -->
-
-		<div class="clear"></div>
 		
-		<div class="note float_left">
+		<div class="note float_right">
 			<h2>Bill Planner</h2>
 
 			<img src="i/billplanner.jpg" class="promo-image" />
@@ -126,7 +137,9 @@
 			</div>
 		</div> <!-- /note -->
 
-		<div class="note float_right">
+		<div class="clear"></div>
+
+		<div class="note float_left">
 			<h2>Stylus.mode</h2>
 
 			<img src="i/stylus.mode.jpg" class="promo-image" />
