--- a/index.html
+++ b/index.html
@@ -11,151 +11,144 @@
   </head>
 
   <body>
-	<div id="header-main-container">
+  	<div id="header-main-container">
       <div id="header">
-		  <div class="float_left">
-		    <h1>Jeremy Fox</h1>
-		    <span class="fancy">Software Engineer / Mobile Developer</span><br/>
-			<a href="http://github.com/atljeremy" target="_black">GitHub</a> | <a href="http://www.linkedin.com/in/atljeremy" target="_black">LinkedIn</a> | <a href="http://facebook.com/atljeremy" target="_black">Facebook</a> | <a href="http://twitter.com/jeremyefox" target="_black">Twitter</a> | <a href="http://atljeremy.tumblr.com" target="_black">Blog</a>
-		  </div>
+  		  <div class="float_left">
+  		    <h1>Jeremy Fox</h1>
+  		    <span class="fancy">Software Engineer / Mobile Developer</span><br/>
+  			  <a href="http://github.com/atljeremy" target="_black">GitHub</a> | <a href="http://www.linkedin.com/in/atljeremy" target="_black">LinkedIn</a> | <a href="http://facebook.com/atljeremy" target="_black">Facebook</a> | <a href="http://twitter.com/jeremyefox" target="_black">Twitter</a> | <a href="http://atljeremy.tumblr.com" target="_black">Blog</a>
+  		  </div>
 
-		  <div class="float_right"><img src="i/me.jpg" height="150"></div>
+  		  <div class="float_right"><img src="i/me.jpg" height="150"></div>
 
-		  <div class="clear"></div>
-	  </div> <!-- /header -->
+  		  <div class="clear"></div>
+  	  </div> <!-- /header -->
 
       <div id="mainContent">
 
-    	<div class="note float_left">
-  			<h2>coMpanion</h2>
+        <div class="note float_left">
+    			<h2>Jira Estimate Chrome Ext.</h2>
+    			<img src="i/jira-est-chrome-ext.jpg" class="promo-image" />
+    			<div class="links">
+    			  <a href="https://chrome.google.com/webstore/detail/dpgemhcfpphgabmednnbgpplffjjfija" class="greenBtn">Add To Chrome</a>
+    			</div>
+      	</div> <!-- /note -->
 
-  			<img src="i/coMpanion.png" class="promo-image" />
+      	<div class="note float_right">
+    			<h2>coMpanion</h2>
+    			<img src="i/coMpanion.png" class="promo-image" />
+    			<div class="links">
+    			  <a href="https://appsto.re/us/f1ggW.i" class="greenBtn">iOS</a>
+  			    <a href="" class="greenBtn">Android (Coming Soon!)</a>
+    			</div>
+      	</div> <!-- /note -->
 
-  			<div class="links">
-  			  <a href="https://appsto.re/us/f1ggW.i" class="greenBtn">iOS</a>
-			  <a href="" class="greenBtn">Android (Coming Soon!)</a>
-  			</div>
-    	</div> <!-- /note -->
+        <div class="clear"></div>
 
-  		<div class="note float_right">
-  			<h2>SnapTo</h2>
+    		<div class="note float_left">
+    			<h2>SnapTo</h2>
+    			<img src="i/snapto_icon.png" class="promo-image" />
+    			<div class="links">
+    			  <a href="https://itunes.apple.com/us/app/snapto/id592940229?mt=8" class="greenBtn">iOS</a>
+    			  <a href="/" class="greenBtn">Android (coming soon!)</a>
+    			</div>
+    		</div> <!-- /note -->
 
-  			<img src="i/snapto_icon.png" class="promo-image" />
+    		<div class="note float_right">
+  			  <h2>My Notes</h2>
+  			  <img src="i/my_notes.png" class="promo-image" />
+  			  <div class="links">
+  			    <a href="https://play.google.com/store/apps/details?id=com.jeremyfox.My_Notes&hl=en_GB" class="greenBtn">Android</a>
+  			  </div>
+    		</div> <!-- /note -->
 
-  			<div class="links">
-  			  <a href="https://itunes.apple.com/us/app/snapto/id592940229?mt=8" class="greenBtn">iOS</a>
-  			  <a href="/" class="greenBtn">Android (coming soon!)</a>
-  			</div>
-  		</div> <!-- /note -->
+        <div class="clear"></div>
 
-  		<div class="clear"></div>
+  		  <div class="note float_left">
+  			  <h2>PetFinder iOS API</h2>
+  			  <img src="i/framework.png" class="promo-image" />
+  			  <div class="links">
+  			    <a href="https://github.com/atljeremy/PetFinderAPI" class="greenBtn">Repo</a>
+  			  </div>
+  		  </div> <!-- /note -->
 
-  		<div class="note float_left">
-			<h2>My Notes</h2>
+    		<div class="note float_right">
+    			<h2>Pivotal Tracker API</h2>
+    			<img src="i/ruby.png" class="promo-image" />
+    			<div class="links">
+    				<a href="https://rubygems.org/gems/pivotal-tracker-api" class="greenBtn">Ruby Gem</a>
+    			  <a href="https://github.com/atljeremy/pivotal-tracker-api" class="greenBtn">Repo</a>
+    			</div>
+    		</div> <!-- /note -->
 
-			<img src="i/my_notes.png" class="promo-image" />
+        <div class="clear"></div>
 
-			<div class="links">
-			  <a href="https://play.google.com/store/apps/details?id=com.jeremyfox.My_Notes&hl=en_GB" class="greenBtn">Android</a>
-			</div>
-  		</div> <!-- /note -->
+    		<div class="note float_left">
+    			<h2>JFMinimalNotifications</h2>
+    			<img src="i/jf_minimal_notifications.png" class="promo-image" />
+    			<div class="links">
+    			  <a href="https://github.com/atljeremy/JFMinimalNotifications" class="greenBtn">Repo</a>
+    			</div>
+    		</div> <!-- /note -->
 
-		<div class="note float_right">
-			<h2>PetFinder iOS API</h2>
+    		<div class="note float_right">
+      	  <h2>JFDepthView</h2>
+      		<img src="i/jfdepthview.png" class="promo-image" />
+      		<div class="links">
+      			<a href="https://github.com/atljeremy/JFDepthView" class="greenBtn">Repo</a>
+      		</div>
+    		</div> <!-- /note -->
 
-			<img src="i/framework.png" class="promo-image" />
+        <div class="clear"></div>
 
-			<div class="links">
-			  <a href="https://github.com/atljeremy/PetFinderAPI" class="greenBtn">Repo</a>
-			</div>
-		</div> <!-- /note -->
+    		<div class="note float_left">
+    			<h2>TeamScor.es</h2>
+    			<img src="i/teamscor.es.png" class="promo-image shadow" />
+    			<div class="links">
+    			  <a href="https://www.teamscor.es" class="greenBtn">Website</a>
+    			</div>
+    		</div> <!-- /note -->
 
-		<div class="clear"></div>
+    		<div class="note float_right">
+    			<h2>HitMe</h2>
+    			<img src="i/hitme-json.png" class="promo-image" />
+    			<div class="links">
+    			  <a href="https://hitme.jeremyfox.me" class="greenBtn">Website</a>
+    			</div>
+    		</div> <!-- /note -->
 
-		<div class="note float_left">
-			<h2>Pivotal Tracker API</h2>
+        <div class="clear"></div>
 
-			<img src="i/ruby.png" class="promo-image" />
+    		<div class="note float_left">
+    			<h2>Bill Planner</h2>
+    			<img src="i/billplanner.jpg" class="promo-image" />
+    			<div class="links">
+    			  <a href="https://github.com/atljeremy/Bill-Planner" class="greenBtn">Repo</a>
+    			  <a href="http://atljeremy.github.com/Bill-Planner/" class="greenBtn">gh-pages</a>
+    			</div>
+    		</div> <!-- /note -->
 
-			<div class="links">
-				<a href="https://rubygems.org/gems/pivotal-tracker-api" class="greenBtn">Ruby Gem</a>
-			  <a href="https://github.com/atljeremy/pivotal-tracker-api" class="greenBtn">Repo</a>
-			</div>
-		</div> <!-- /note -->
+    		<div class="note float_right">
+    			<h2>Stylus.mode</h2>
+    			<img src="i/stylus.mode.jpg" class="promo-image" />
+    			<div class="links">
+    			  <a href="https://github.com/atljeremy/Stylus.mode" class="greenBtn">Repo</a>
+    			</div>
+    		</div> <!-- /note -->
 
-		<div class="note float_right">
-			<h2>JFMinimalNotifications</h2>
+  		  <div class="clear"></div>
 
-			<img src="i/jf_minimal_notifications.png" class="promo-image" />
-
-			<div class="links">
-			  <a href="https://github.com/atljeremy/JFMinimalNotifications" class="greenBtn">Repo</a>
-			</div>
-		</div> <!-- /note -->
-
-		<div class="clear"></div>
-
-		<div class="note float_left">
-  			<h2>JFDepthView</h2>
-
-  			<img src="i/jfdepthview.png" class="promo-image" />
-
-  			<div class="links">
-  			  <a href="https://github.com/atljeremy/JFDepthView" class="greenBtn">Repo</a>
-  			</div>
-		</div> <!-- /note -->
-
-		<div class="note float_right">
-			<h2>TeamScor.es</h2>
-
-			<img src="i/teamscor.es.png" class="promo-image shadow" />
-
-			<div class="links">
-			  <a href="https://www.teamscor.es" class="greenBtn">Website</a>
-			</div>
-		</div> <!-- /note -->
-
-		<div class="clear"></div>
-
-		<div class="note float_left">
-			<h2>HitMe</h2>
-
-			<img src="i/hitme-json.png" class="promo-image" />
-
-			<div class="links">
-			  <a href="https://hitme.jeremyfox.me" class="greenBtn">Website</a>
-			</div>
-		</div> <!-- /note -->
-
-		<div class="note float_right">
-			<h2>Bill Planner</h2>
-
-			<img src="i/billplanner.jpg" class="promo-image" />
-
-			<div class="links">
-			  <a href="https://github.com/atljeremy/Bill-Planner" class="greenBtn">Repo</a>
-			  <a href="http://atljeremy.github.com/Bill-Planner/" class="greenBtn">gh-pages</a>
-			</div>
-		</div> <!-- /note -->
-
-		<div class="clear"></div>
-
-		<div class="note float_left">
-			<h2>Stylus.mode</h2>
-
-			<img src="i/stylus.mode.jpg" class="promo-image" />
-
-			<div class="links">
-			  <a href="https://github.com/atljeremy/Stylus.mode" class="greenBtn">Repo</a>
-			</div>
-		</div> <!-- /note -->
-
-		<div class="clear"></div>
-
-		<div id="footer"> <a href="http://github.com/atljeremy" target="_black">GitHub</a> | <a href="http://www.linkedin.com/in/atljeremy" target="_black">LinkedIn</a> | <a href="http://facebook.com/atljeremy" target="_black">Facebook</a> | <a href="http://twitter.com/jeremyefox" target="_black">Twitter</a> | <a href="http://atljeremy.tumblr.com" target="_black">Blog</a> <span class="float_right">© 2016 Jeremy Fox</span> </div>
+  		  <div id="footer">
+          <a href="http://github.com/atljeremy" target="_black">GitHub</a> |
+          <a href="http://www.linkedin.com/in/atljeremy" target="_black">LinkedIn</a> |
+          <a href="http://facebook.com/atljeremy" target="_black">Facebook</a> |
+          <a href="http://twitter.com/jeremyefox" target="_black">Twitter</a> |
+          <a href="http://atljeremy.tumblr.com" target="_black">Blog</a>
+          <span class="float_right">© 2016 Jeremy Fox</span>
+        </div>
 
       </div> <!-- /mainContent -->
-	</div> <!-- /header-main-container -->
+  	</div> <!-- /header-main-container -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
