Added new medium size promo image style

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div class="note float_left">
     			<h2>Jira Estimate Chrome Ext.</h2>
-    			<img src="i/jira-est-chrome-ext.jpg" class="promo-image" />
+    			<img src="i/jira-est-chrome-ext.jpg" class="medium-promo-image" />
     			<div class="links">
     			  <a href="https://chrome.google.com/webstore/detail/dpgemhcfpphgabmednnbgpplffjjfija" class="greenBtn">Add To Chrome</a>
     			</div>
